force-app/main/default/objects/Product2/fields/DSales_Aplicaporcentajecobro__c.field-meta.xml
<CustomField>
    <fullName>DSales_Aplicaporcentajecobro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>¿Aplica porcentaje de cobro?</label>
    <type>Checkbox</type>
</CustomField>