force-app/main/default/objects/Product2/fields/DSALES_Campaa__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Campaa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaña</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>