force-app/main/default/objects/Product2/fields/DSALES_Categoria__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Categoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Categoría</label>
    <referenceTo>DSALES_Categoria__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>