force-app/main/default/objects/Product2/fields/DSALES_Clase__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Clase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clase</label>
    <referenceTo>DSALES_Clase__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>