force-app/main/default/objects/Product2/fields/DSALES_Class__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Class__c</fullName>
    <label>Clase</label>
    <length>20</length>
    <type>Text</type>
</CustomField>