force-app/main/default/objects/Product2/fields/DSALES_Depa__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Depa__c</fullName>
    <label>Categoría</label>
    <length>20</length>
    <type>Text</type>
</CustomField>