force-app/main/default/objects/Product2/fields/DSALES_Fam__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Fam__c</fullName>
    <label>Familia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>