force-app/main/default/objects/Product2/fields/DSALES_Family__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Family__c</fullName>
    <label>Famlia</label>
    <length>20</length>
    <type>Text</type>
</CustomField>