force-app/main/default/objects/Product2/fields/DSales_Marca__c.field-meta.xml
<CustomField>
    <fullName>DSales_Marca__c</fullName>
    <label>Marca</label>
    <length>30</length>
    <type>Text</type>
</CustomField>