force-app/main/default/objects/Product2/fields/DSALES_Matriz__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Matriz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Matriz</label>
    <referenceTo>DSales_Matriz_GEX__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>