force-app/main/default/objects/Product2/fields/DSALES_Noaplica__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Noaplica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No aplica</label>
    <type>Checkbox</type>
</CustomField>