force-app/main/default/objects/Product2/fields/DSales_Nombre_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Nombre_del_Producto__c</fullName>
    <formula>IF( ISPICKVAL( DSales_Tipo_de_Producto__c , &quot;Producto&quot;) ,  DSales_Articulo__c  + &quot; &quot; +  DSales_Marca__c + &quot; &quot; +  DSales_Modelo__c,  &quot;GEX &quot; + DSales_Articulo__c + &quot; &quot; +  DSales_Marca__c + &quot; &quot; +  DSales_Modelo__c)</formula>
    <label>Nombre del Producto</label>
    <type>Text</type>
</CustomField>