force-app/main/default/objects/Product2/fields/DSales_PorcentajeCobro__c.field-meta.xml
<CustomField>
    <fullName>DSales_PorcentajeCobro__c</fullName>
    <label>Porcentaje de Cobro</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>