force-app/main/default/objects/Product2/fields/DSALES_Regiones__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Regiones__c</fullName>
    <label>Regiones</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DSALES_Region</valueSetName>
    </valueSet>
</CustomField>