force-app/main/default/objects/Product2/fields/DSALES_SegEspecifico__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SegEspecifico__c</fullName>
    <inlineHelpText>Indique el tipo de seguro (Ej. Motos, Vida)</inlineHelpText>
    <label>Seguro específico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seguro de Motos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>