force-app/main/default/objects/Product2/fields/DSALES_ServEspecifico__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ServEspecifico__c</fullName>
    <inlineHelpText>Indique que tipo de servicio se requiere (Ej: GEX, Instalación, Armando)</inlineHelpText>
    <label>Servicio específico</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Garantía Extendida</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>