force-app/main/default/objects/Product2/fields/DSALES_ServicioSeguro__c.field-meta.xml
<CustomField>
    <fullName>DSALES_ServicioSeguro__c</fullName>
    <label>Servicio ó Seguro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>