force-app/main/default/objects/Product2/fields/DSALES_SubCategoria__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SubCategoria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub Categoría</label>
    <referenceTo>DSALES_SubCategoria__c</referenceTo>
    <relationshipLabel>Productos</relationshipLabel>
    <relationshipName>Productos</relationshipName>
    <type>Lookup</type>
</CustomField>