force-app/main/default/objects/Product2/fields/DSALES_SubCategorias__c.field-meta.xml
<CustomField>
    <fullName>DSALES_SubCategorias__c</fullName>
    <label>Sub Categoría</label>
    <length>255</length>
    <type>Text</type>
</CustomField>