force-app/main/default/objects/Product2/fields/DSales_Tipo_de_Producto__c.field-meta.xml
<CustomField>
    <fullName>DSales_Tipo_de_Producto__c</fullName>
    <label>Tipo de Producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Producto</fullName>
            </value>
            <value>
                <fullName>Seguro</fullName>
            </value>
            <value>
                <fullName>Servicio</fullName>
            </value>
            <value>
                <fullName>Servicio/Seguro</fullName>
                <isActive>false</isActive>
                <label>Servicio/Seguro</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>