force-app/main/default/objects/Product2/fields/DSALES_TipoServicio__c.field-meta.xml
<CustomField>
    <fullName>DSALES_TipoServicio__c</fullName>
    <formula>IF(AND(DSALES_Servicio__c, DSALES_Seguro__c), &quot;3&quot;,
IF(DSALES_Servicio__c, &quot;2&quot;,
IF(DSALES_Seguro__c, &quot;1&quot;,&quot;0&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de servicio</label>
    <type>Text</type>
</CustomField>