force-app/main/default/objects/Product2/fields/DSALES_vehculo__c.field-meta.xml
<CustomField>
    <fullName>DSALES_vehculo__c</fullName>
    <description>Campo para etiquetar el producto con su ID de vehículo que maneja el proveedor.</description>
    <label>ID vehículo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>