force-app/main/default/objects/Product2/fields/DSALES_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vigencia__c</fullName>
    <description>Campo para ingresar la fecha de comercialización del producto.</description>
    <label>Vigencia</label>
    <type>Date</type>
</CustomField>