force-app/main/default/objects/Product2/fields/DSALES_Vinculado__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Vinculado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vinculado</label>
    <type>Checkbox</type>
</CustomField>