force-app/main/default/objects/Product2/recordTypes/DSales_Garantia_Extendida.recordType-meta.xml
<RecordType>
    <fullName>DSales_Garantia_Extendida</fullName>
    <active>true</active>
    <description>Productos para Garantía Extendida</description>
    <label>Garantía Extendida</label>
</RecordType>